<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">新建联系人</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_ok">完成</string>
    <string name="bt_cancel">取消</string>
    <string name="tv_phone">电话</string>
    <string name="bt_phone">手机</string>
    <string name="ht_phone">电话</string>
    <string name="ht_name">姓名</string>
    <string name="tv_mail">电子邮件</string>
    <string name="mailHouse">住宅</string>
    <string name="htMail">电子邮件</string>
    <string name="tvAddress">通信地址</string>
    <string name="addressHouse">住宅</string>
    <string name="htStreet">街道</string>
    <string name="htCity">城市</string>
    <string name="htProvince">省/直辖市/自治区</string>
    <string name="tvSns">社交工具</string>
    <string name="btSnsWeiChat">微信</string>
    <string name="snsWeiChatNumber">微信账号</string>


</resources>
